correct homepage field

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nadia-site",
-  "homepage": "https://egonzalez49.github.io/nadia-site",
+  "homepage": "https://egonzalez49.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
